Erster Versuch einfügen AuthId als GET Pfad Parameter
